--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
     <title>Лидер Дейтабейз ЕООД</title>
 </head>
 
-<body class="home-page">
+<body class="info-page">
      <header>
         <nav>
             <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
@@ -51,40 +51,44 @@
     </div>
 
     <div class="overlay" id="overlay"></div>
-    <section class="hero">
-        <div class="hero-content fade-in">
-            <h1>Информационни и консултански услуги</h1>
-            <p>Дружеството е създадено през 1996г. и е специализирано в сферата на информационните услуги.
-                Екипът ни има дъллгогодишен опит в обработката на статистическа информация, документообработка и консултански услуги.
-                Приели сме за наша мисия да работим съвместно с партньорите си за планиране и достигане на успешни бизнес цели.
+
+    <main class="info-page-main">
+        <section class="info-hero">
+            <h1> Информационни услуги</h1>
+            <p>Професионална обработка на статистическа информация </p>
+            <a href="contact.html" class="btn"> Свържете се с нас</a>
+        </section>
+    
+
+    <section class="info-cards fade-in">
+        <h2>Нашите информационни услуги вклячват:</h2>
+        <div class="card">
+            <h3>Обработка и подготовка на данни</h3>
+            <p>Предоставяме услуги по първична обработка и подготовка на данни за последващи анализи. 
+                Работим с извадки от различен обем и специфика, като гарантираме пълна коректност и проследимост
+                на всяка стъпка от статистическия процес.
             </p>
-            <a href="#services" class="btn">Разгледайте нашите услуги</a>
+        </div>
+
+         <div class="card">
+            <h3>Статистически анализ и оценка</h3>
+            <p>Извършваме задълбочени статистически анализи и оценки, базирани на надеждни методологии.
+                Нашият подход осигурява висока точнност и достоверност при разглеждането на ключовите показатели
+                и зависимостите между тях.
+            </p>
+        </div>
+
+         <div class="card">
+            <h3>Подкрепа при бизнес планиране и управление</h3>
+            <p>Навременният и качествен статистически анализ е съществен елемент от ефективното планиране и управление 
+                на дейността. Резултатите от нашата работа подпомагат вземането на информирани решения и съдействат
+                за постигане на поставенитебизнес цели по бърз и устойчив начин.
+            </p>
         </div>
     </section>
-    <section class="services fade-in" id="services">
-        <h2>Нашите услуги</h2>
-        <div class="service-cards">
-            <div class="card">
-<h3>Информационни услуги</h3>
-<p>Професионална обработка на статистическа информация</p>
- <a href="info.html" class="btn">Научи повече</a>
-            </div>
+    </main>
 
-            <div class="card">
-<h3>Консултански услуги</h3>
-<p>Професионални консултазии за защита на данните и видеонаблюдение</p>
- <a href="consult.html" class="btn">Научи повече</a>
-            </div>
-
-            <div class="card">
-<h3>Информационни услуги</h3>
-<p>Професионални услуги свързани с обработката на документи</p>
- <a href="doccument.html" class="btn">Научи повече</a>
-            </div>
-        </div>
-    </section>
-
-     <footer >
+    <footer >
         <p>&copy; Leader Database LTD</p>
         <p>Designed by Leader Database LTD</p>
     </footer>
@@ -138,6 +142,5 @@
   window.addEventListener('scroll', handleScroll);
   handleScroll(); // За да се активира и при зареждане
 </script>
-
 </body>
 </html>
