--- a/consult.html
+++ b/consult.html
@@ -8,7 +8,7 @@
     <title>Лидер Дейтабейз ЕООД</title>
 </head>
 
-<body class="home-page">
+<body class="consult-page">
      <header>
         <nav>
             <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
@@ -51,40 +51,49 @@
     </div>
 
     <div class="overlay" id="overlay"></div>
-    <section class="hero">
-        <div class="hero-content fade-in">
-            <h1>Информационни и консултански услуги</h1>
-            <p>Дружеството е създадено през 1996г. и е специализирано в сферата на информационните услуги.
-                Екипът ни има дъллгогодишен опит в обработката на статистическа информация, документообработка и консултански услуги.
-                Приели сме за наша мисия да работим съвместно с партньорите си за планиране и достигане на успешни бизнес цели.
-            </p>
-            <a href="#services" class="btn">Разгледайте нашите услуги</a>
-        </div>
-    </section>
-    <section class="services fade-in" id="services">
-        <h2>Нашите услуги</h2>
-        <div class="service-cards">
-            <div class="card">
-<h3>Информационни услуги</h3>
-<p>Професионална обработка на статистическа информация</p>
- <a href="info.html" class="btn">Научи повече</a>
-            </div>
 
-            <div class="card">
-<h3>Консултански услуги</h3>
-<p>Професионални консултации за защита на данните и видеонаблюдение</p>
- <a href="consult.html" class="btn">Научи повече</a>
-            </div>
+    <main class="consult-page-main">
+        <section class="consult-hero">
+            <h1> Консултански услуги</h1>
+            <p>Работим рамо до рамо с клиентите си, за да осигурим надеждни и сигурни решения за видеонаблюдение, 
+                съобразени с техните специфични нужди и нормативните изисквания. </p>
+            <a href="contact.html" class="btn"> Свържете се с нас</a>
+        </section>
 
-            <div class="card">
-<h3>Обработка на документи</h3>
-<p>Професионални услуги свързани с обработката на документи</p>
- <a href="document.html" class="btn">Научи повече</a>
-            </div>
-        </div>
-    </section>
+<section class="consult-cards fade-in">
+    <h2>Нашият екип предлага професионални решения в следните сфери:</h2>
+    <div class="card">
+<h3>Индивидуален подход</h3>
+<p>
+    Съдействаме при определяне на нуждите на всеки клиент и подбираме
+    най- подходящите системи за видеонаблюдение. Осигуряваме висококачествена
+    техника и решения, съобразени със спецификата на обекта и 
+    изискванията за сигурност.
+</p>
+    </div>
 
-     <footer >
+     <div class="card">
+<h3>Защита на данните</h3>
+<p>
+    Консултираме партньрите си по всички въпроси, свързани със защитата 
+    личните данни. Съдействаме при спазване на изискванията за събиране, обработване,
+    съхранение и препращане на информация.
+</p>
+    </div>
+
+     <div class="card">
+<h3>Технически и правни решения</h3>
+<p>
+  Предлагаме професионални съвети относно техническите мерки за сигурности 
+  и прилагането на правната рамка. Нашата експертиза гарантира надеждност, 
+  законност и спокойствие при изграждане на системи за видеонаблюдение.
+</p>
+    </div>
+</section>
+
+        </main>
+
+        <footer >
         <p>&copy; Leader Database LTD</p>
         <p>Designed by Leader Database LTD</p>
     </footer>
@@ -138,6 +147,5 @@
   window.addEventListener('scroll', handleScroll);
   handleScroll(); // За да се активира и при зареждане
 </script>
-
 </body>
 </html>
