--- a/document.html
+++ b/document.html
@@ -8,7 +8,7 @@
     <title>Лидер Дейтабейз ЕООД</title>
 </head>
 
-<body class="home-page">
+<body class="document-page">
      <header>
         <nav>
             <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
@@ -51,40 +51,46 @@
     </div>
 
     <div class="overlay" id="overlay"></div>
-    <section class="hero">
-        <div class="hero-content fade-in">
-            <h1>Информационни и консултански услуги</h1>
-            <p>Дружеството е създадено през 1996г. и е специализирано в сферата на информационните услуги.
-                Екипът ни има дъллгогодишен опит в обработката на статистическа информация, документообработка и консултански услуги.
-                Приели сме за наша мисия да работим съвместно с партньорите си за планиране и достигане на успешни бизнес цели.
-            </p>
-            <a href="#services" class="btn">Разгледайте нашите услуги</a>
-        </div>
-    </section>
-    <section class="services fade-in" id="services">
-        <h2>Нашите услуги</h2>
-        <div class="service-cards">
-            <div class="card">
-<h3>Информационни услуги</h3>
-<p>Професионална обработка на статистическа информация</p>
- <a href="info.html" class="btn">Научи повече</a>
-            </div>
 
-            <div class="card">
-<h3>Консултански услуги</h3>
-<p>Професионални консултации за защита на данните и видеонаблюдение</p>
- <a href="consult.html" class="btn">Научи повече</a>
-            </div>
+    <main class="document-page-main">
+        <section class="document-hero">
+            <h1> Обработка на документи</h1>
+            <p>Предлагаме услуги, които улесняват управлението на информация и оптимизират административните
+                процеси във Вашата организация. </p>
+            <a href="contact.html" class="btn"> Свържете се с нас</a>
+        </section>
 
-            <div class="card">
-<h3>Обработка на документи</h3>
-<p>Професионални услуги свързани с обработката на документи</p>
- <a href="document.html" class="btn">Научи повече</a>
-            </div>
-        </div>
-    </section>
+<section class="document-cards fade-in">
+    <h2>Документообработка и дигитализация на информация</h2>
+    <div class="card">
+        <h3>Създаване и обработка на документи</h3>
+        <p>
+Помагаме при изготвяне, редактиране и оформяне на документи според Вашите изисквания. Гарантираме точност, последователност
+и професионален стандарт.
+        </p>
+    </div>
 
-     <footer >
+    <div class="card">
+        <h3>Дигитализация и архивиране</h3>
+        <p>
+Дигитализираме и организираме документи за по- лесен достъп и сигурно съхранение. Използваме надеждни методи за архивиране
+и управление на информацията.
+        </p>
+    </div>
+
+    <div class="card">
+        <h3>Индивидуални решения</h3>
+        <p>
+Предлагаме персонализирани подходи, съобразени с нуждите на Вашата дейност. Нашият опит помага за модернизиране и 
+автоматизация на процесите по документообработка.
+        </p>
+    </div>
+</section>
+    </main>
+
+      
+
+        <footer >
         <p>&copy; Leader Database LTD</p>
         <p>Designed by Leader Database LTD</p>
     </footer>
@@ -138,6 +144,5 @@
   window.addEventListener('scroll', handleScroll);
   handleScroll(); // За да се активира и при зареждане
 </script>
-
 </body>
 </html>
