--- a/contact.html
+++ b/contact.html
@@ -9,37 +9,21 @@
 </head>
 
 <body class="contact-page">
-  <header>
-    <nav>
-      <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+   <header>
+  <nav>
+    <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
 
-      <ul class="nav-links">
-        <li><a href="index.html">Начало</a></li>
-        <li class="dropdown">
-          <a href="#">Услуги</a>
-          <ul class="dropdown-menu">
-            <li><a href="info.html">Информационни услуги</a></li>
-            <li><a href="consult.html">Консултации</a></li>
-            <li><a href="document.html">Обработка на документи</a></li>
-          </ul>
-        </li>
-        <li><a href="contact.html" class="active">Контакти</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
-  <div class="side-menu" id="sideMenu">
-    <button class="close-btn">&times;</button>
-    <ul>
+    <ul class="nav-links">
       <li><a href="index.html">Начало</a></li>
-      <li class="has-submenu">
-        <a href="#">Услуги</a>
-        <ul class="submenu">
+      <li class="dropdown">
+        <a href="#" id="services-toggle">Услуги</a>
+        <ul class="dropdown-menu">
           <li><a href="info.html">Информационни услуги</a></li>
           <li><a href="consult.html">Консултации</a></li>
           <li><a href="document.html">Обработка на документи</a></li>
@@ -47,9 +31,27 @@
       </li>
       <li><a href="contact.html">Контакти</a></li>
     </ul>
-  </div>
+  </nav>
+</header>
 
-  <div class="overlay" id="overlay"></div>
+<!-- Странично меню за мобилна версия -->
+<div class="side-menu" id="sideMenu">
+  <button class="close-btn" id="closeBtn">&times;</button>
+  <ul>
+    <li><a href="index.html">Начало</a></li>
+    <li class="has-submenu">
+      <a href="#" id="mobileServices">Услуги</a>
+      <ul class="submenu">
+        <li><a href="info.html">Информационни услуги</a></li>
+        <li><a href="consult.html">Консултации</a></li>
+        <li><a href="document.html">Обработка на документи</a></li>
+      </ul>
+    </li>
+    <li><a href="contact.html">Контакти</a></li>
+  </ul>
+</div>
+
+<div class="overlay" id="overlay"></div>
 
   <main class="contact-page-main">
     <section class="contact-hero">
@@ -78,33 +80,55 @@
   </footer>
 
   <script>
-    const hamburger = document.querySelector(".hamburger");
-    const sideMenu = document.getElementById("sideMenu");
-    const overlay = document.getElementById("overlay");
-    const closeBtn = document.querySelector(".side-menu .close-btn");
+  const servicesToggle = document.getElementById("services-toggle");
+  const dropdown = document.querySelector(".dropdown");
+  const dropdownMenu = document.querySelector(".dropdown-menu");
+  const hamburger = document.getElementById("hamburger");
+  const sideMenu = document.getElementById("sideMenu");
+  const overlay = document.getElementById("overlay");
+  const closeBtn = document.getElementById("closeBtn");
+  const mobileServices = document.getElementById("mobileServices");
 
-    hamburger.addEventListener("click", () => {
-      sideMenu.classList.add("active");
-      overlay.classList.add("active");
-    });
+  // --- Отваряне / затваряне на dropdown (настолен режим) ---
+  servicesToggle.addEventListener("click", (e) => {
+    e.preventDefault();
+    e.stopPropagation();
 
-    closeBtn.addEventListener("click", () => {
-      sideMenu.classList.remove("active");
-      overlay.classList.remove("active");
-    });
+    // Затваря, ако е вече отворено
+    dropdownMenu.classList.toggle("active");
+  });
 
-    overlay.addEventListener("click", () => {
-      sideMenu.classList.remove("active");
-      overlay.classList.remove("active");
-    });
+  // --- Клик извън менюто го затваря ---
+  document.addEventListener("click", (e) => {
+    if (!dropdown.contains(e.target)) {
+      dropdownMenu.classList.remove("active");
+    }
+  });
 
-    document.querySelectorAll(".has-submenu > a").forEach((link) => {
-      link.addEventListener("click", (e) => {
-        e.preventDefault();
-        link.parentElement.classList.toggle("open");
-      });
-    });
-  </script>
+  // --- Хамбургер (мобилно меню) ---
+  hamburger.addEventListener("click", () => {
+    sideMenu.classList.add("active");
+    overlay.classList.add("active");
+  });
+
+  closeBtn.addEventListener("click", () => {
+    sideMenu.classList.remove("active");
+    overlay.classList.remove("active");
+  });
+
+  overlay.addEventListener("click", () => {
+    sideMenu.classList.remove("active");
+    overlay.classList.remove("active");
+  });
+
+  // --- Подменю в мобилното меню ---
+  mobileServices.addEventListener("click", (e) => {
+    e.preventDefault();
+    const parent = mobileServices.parentElement;
+    parent.classList.toggle("active");
+  });
+</script>
+
 
   <script>
     const fadeElements = document.querySelectorAll('.fade-in');
