--- a/consult.html
+++ b/consult.html
@@ -54,7 +54,7 @@
 <div class="overlay" id="overlay"></div>
 
     <main class="consult-page-main">
-        <section class="consult-hero">
+        <section class="consult-hero fade-in">
             <h1> Консултански услуги</h1>
             <p>Работим рамо до рамо с клиентите си, за да осигурим надеждни и сигурни решения за видеонаблюдение, 
                 съобразени с техните специфични нужди и нормативните изисквания. </p>
