--- a/document.html
+++ b/document.html
@@ -54,7 +54,7 @@
 <div class="overlay" id="overlay"></div>
 
     <main class="document-page-main">
-        <section class="document-hero">
+        <section class="document-hero fade-in">
             <h1> Обработка на документи</h1>
             <p>Предлагаме услуги, които улесняват управлението на информация и оптимизират административните
                 процеси във Вашата организация. </p>
