--- a/info.html
+++ b/info.html
@@ -54,7 +54,7 @@
 <div class="overlay" id="overlay"></div>
 
     <main class="info-page-main">
-        <section class="info-hero">
+        <section class="info-hero fade-in">
             <h1> Информационни услуги</h1>
             <p>Професионална обработка на статистическа информация </p>
             <a href="contact.html" class="btn"> Свържете се с нас</a>
