--- a/consult.html
+++ b/consult.html
@@ -55,7 +55,7 @@
 
     <main class="consult-page-main">
         <section class="consult-hero fade-in">
-            <h1> Консултански услуги</h1>
+            <h1> Консултантски услуги</h1>
             <p>Работим рамо до рамо с клиентите си, за да осигурим надеждни и сигурни решения за видеонаблюдение, 
                 съобразени с техните специфични нужди и нормативните изисквания. </p>
             <a href="contact.html" class="btn"> Свържете се с нас</a>
@@ -76,7 +76,7 @@
      <div class="card">
 <h3>Защита на данните</h3>
 <p>
-    Консултираме партньрите си по всички въпроси, свързани със защитата 
+    Консултираме партньорите си по всички въпроси, свързани със защитата на 
     личните данни. Съдействаме при спазване на изискванията за събиране, обработване,
     съхранение и препращане на информация.
 </p>
@@ -85,7 +85,7 @@
      <div class="card">
 <h3>Технически и правни решения</h3>
 <p>
-  Предлагаме професионални съвети относно техническите мерки за сигурности 
+  Предлагаме професионални съвети относно техническите мерки за сигурност 
   и прилагането на правната рамка. Нашата експертиза гарантира надеждност, 
   законност и спокойствие при изграждане на системи за видеонаблюдение.
 </p>
