--- a/contact.html
+++ b/contact.html
@@ -56,20 +56,20 @@
   <main class="contact-page-main">
     <section class="contact-hero">
       <h1>Свържете се с нас</h1>
-      <p>Ние сме на разположение да отговорим на вашите въпроси и запитвания.</p>
+      <p>Ние сме на разположение да отговорим на Вашите въпроси и запитвания.</p>
     </section>
 
     <section class="contact-info fade-in">
       <div class="contact-card">
         <i class="fa-solid fa-phone"></i>
         <h3>Телефон</h3>
-        <p><a href="tel:+359123456789">+359 88 834 6377</a></p>
+        <p><a href="tel:+359 88 834 6377">+359 88 834 6377</a></p>
       </div>
 
       <div class="contact-card">
         <i class="fa-solid fa-envelope"></i>
         <h3>Имейл</h3>
-        <p><a href="mailto:office@leaderdatabase.bg">office@leaderdatabase.bg</a></p>
+        <p><a href="mailto:office@leader-database.bg">office@leader-database.bg</a></p>
       </div>
     </section>
   </main>
