--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
     <section class="hero">
         <div class="hero-content fade-in">
-            <h1>Информационни и консултански услуги</h1>
-            <p>Дружеството е създадено през 1996г. и е специализирано в сферата на информационните услуги.
-                Екипът ни има дъллгогодишен опит в обработката на статистическа информация, документообработка и консултански услуги.
+            <h1>Информационни и консултантски услуги</h1>
+            <p>Дружеството е създадено през 1996 г. и е специализирано в сферата на информационните услуги.
+                Екипът ни има дългогодишен опит в обработката на статистическа информация, документообработка и консултантски услуги.
                 Приели сме за наша мисия да работим съвместно с партньорите си за планиране и достигане на успешни бизнес цели.
             </p>
             <a href="#services" class="btn">Разгледайте нашите услуги</a>
@@ -73,14 +73,14 @@
             </div>
 
             <div class="card">
-<h3>Консултански услуги</h3>
+<h3>Консултантски услуги</h3>
 <p>Професионални консултации за защита на данните и видеонаблюдение</p>
  <a href="consult.html" class="btn">Научи повече</a>
             </div>
 
             <div class="card">
 <h3>Обработка на документи</h3>
-<p>Професионални услуги свързани с обработката на документи</p>
+<p>Професионални услуги, свързани с обработката на документи</p>
  <a href="document.html" class="btn">Научи повече</a>
             </div>
         </div>
