--- a/info.html
+++ b/info.html
@@ -62,7 +62,7 @@
     
 
     <section class="info-cards fade-in">
-        <h2>Нашите информационни услуги вклячват:</h2>
+        <h2>Нашите информационни услуги включват:</h2>
         <div class="card">
             <h3>Обработка и подготовка на данни</h3>
             <p>Предоставяме услуги по първична обработка и подготовка на данни за последващи анализи. 
@@ -74,7 +74,7 @@
          <div class="card">
             <h3>Статистически анализ и оценка</h3>
             <p>Извършваме задълбочени статистически анализи и оценки, базирани на надеждни методологии.
-                Нашият подход осигурява висока точнност и достоверност при разглеждането на ключовите показатели
+                Нашият подход осигурява висока точност и достоверност при разглеждането на ключовите показатели
                 и зависимостите между тях.
             </p>
         </div>
@@ -83,7 +83,7 @@
             <h3>Подкрепа при бизнес планиране и управление</h3>
             <p>Навременният и качествен статистически анализ е съществен елемент от ефективното планиране и управление 
                 на дейността. Резултатите от нашата работа подпомагат вземането на информирани решения и съдействат
-                за постигане на поставенитебизнес цели по бърз и устойчив начин.
+                за постигане на поставените бизнес цели по бърз и устойчив начин.
             </p>
         </div>
     </section>
