--- a/info.html
+++ b/info.html
@@ -91,7 +91,7 @@
 
     <footer >
         <p>&copy; Leader Database LTD</p>
-        <p>Designed by Leader Database LTD</p>
+        <p>Designed by Meleta LTD</p>
     </footer>
     
  <script>
