--- a/consult.html
+++ b/consult.html
@@ -96,7 +96,7 @@
 
         <footer >
         <p>&copy; Leader Database LTD</p>
-        <p>Designed by Leader Database LTD</p>
+        <p>Designed by Meleta LTD</p>
     </footer>
     
  <script>
