--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 
   <footer>
     <p>&copy; Leader Database LTD</p>
-    <p>Designed by Leader Database LTD</p>
+    <p>Designed by Meleta LTD</p>
   </footer>
 
   <script>
