--- a/document.html
+++ b/document.html
@@ -93,7 +93,7 @@
 
         <footer >
         <p>&copy; Leader Database LTD</p>
-        <p>Designed by Leader Database LTD</p>
+        <p>Designed by Meleta LTD</p>
     </footer>
     
  <script>
