--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
      <footer >
         <p>&copy; Leader Database LTD</p>
-        <p>Designed by Leader Database LTD</p>
+        <p>Designed by Meleta LTD</p>
     </footer>
     
  <script>
