--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Екипът ни има дългогодишен опит в обработката на статистическа информация, документообработка и консултантски услуги.
                 Приели сме за наша мисия да работим съвместно с партньорите си за планиране и достигане на успешни бизнес цели.
             </p>
-            <a href="#services" class="btn">Разгледайте нашите услуги</a>
+            <a href="#services" class="btn">Нашите услуги</a>
         </div>
     </section>
     <section class="services fade-in" id="services">
@@ -68,19 +68,19 @@
         <div class="service-cards">
             <div class="card">
 <h3>Информационни услуги</h3>
-<p>Професионална обработка на статистическа информация</p>
+<p>Обработка на статистическа информация</p>
  <a href="info.html" class="btn">Научи повече</a>
             </div>
 
             <div class="card">
 <h3>Консултантски услуги</h3>
-<p>Професионални консултации за защита на данните и видеонаблюдение</p>
+<p>Консултации за защита на данните и видеонаблюдение</p>
  <a href="consult.html" class="btn">Научи повече</a>
             </div>
 
             <div class="card">
 <h3>Обработка на документи</h3>
-<p>Професионални услуги, свързани с обработката на документи</p>
+<p>Услуги, свързани с обработката на документи</p>
  <a href="document.html" class="btn">Научи повече</a>
             </div>
         </div>
