--- a/consult.html
+++ b/consult.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Лидер Дейтабейз ЕООД</title>
+    <title>ЛИДЕР ДЕЙТАБЕЙЗ ЕООД</title>
 </head>
 
 <body class="consult-page">
      <header>
   <nav>
-    <a class="logo" href="index.html">Лидер Дейтабейз ЕООД</a>
+    <a class="logo" href="index.html">ЛИДЕР ДЕЙТАБЕЙЗ ЕООД</a>
 
     <div class="hamburger" id="hamburger">
       <span></span>
