--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <li><a href="contact.html">Контакти</a></li>
   </ul>
 
-<img src="images/project-info.png.png" class="project-image mobile-only" alt="Проект BG05SFPR002">
+<img src="images/project-info.png.png" class="eu-corner-mobile mobile-only popup-trigger"alt="Проект BG05SFPR002">
 
 
 </div>
