--- a/consult.html
+++ b/consult.html
@@ -49,6 +49,9 @@
     </li>
     <li><a href="contact.html">Контакти</a></li>
   </ul>
+
+ <img src="images/project-info.png.png" class="eu-corner-mobile mobile-only popup-trigger"alt="Проект BG05SFPR002">
+
 </div>
 
 <div class="overlay" id="overlay"></div>
@@ -95,9 +98,22 @@
         </main>
 
         <footer >
+
+<div class="footer-left">
+        <img src="images/project-info.png.png"  class="eu-corner desktop-only popup-trigger" alt="EU Project">
+
+    </div>
+
+
         <p>&copy; Leader Database LTD</p>
         <p>Designed by Meleta LTD</p>
     </footer>
+
+         <!-- popup overlay -->
+<div id="imagePopup" class="popup-overlay">
+    <span class="close-popup">&times;</span>
+    <img id="popupImg" class="popup-img">
+</div>
     
  <script>
   const servicesToggle = document.getElementById("services-toggle");
@@ -166,5 +182,35 @@
   window.addEventListener('scroll', handleScroll);
   handleScroll(); // За да се активира и при зареждане
 </script>
+
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const popup = document.getElementById("imagePopup");
+    const popupImg = document.getElementById("popupImg");
+    const triggers = document.querySelectorAll(".popup-trigger");
+    const closeBtn = document.querySelector(".close-popup");
+
+    // Клик върху малката картинка → отваря popup
+    triggers.forEach(img => {
+        img.addEventListener("click", () => {
+            popupImg.src = img.src;
+            popup.style.display = "flex";
+        });
+    });
+
+    // Затваряне при X
+    closeBtn.addEventListener("click", () => {
+        popup.style.display = "none";
+    });
+
+    // Затваряне при клик извън изображението
+    popup.addEventListener("click", (e) => {
+        if (e.target === popup) {
+            popup.style.display = "none";
+        }
+    });
+});
+</script>
+
 </body>
 </html>
